dapps/b-agri/front-end/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: b-agri-front-end
  labels:
    app: b-agri-front-end
spec:
  selector:
    matchLabels:
      app: b-agri-front-end
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: b-agri-front-end
    spec:
      containers:
      - name: b-agri-front-end
        image: ducdm99tb/b-agri-front-end:1.5
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        # env:
        #   - name: CONFIG_FILE
        #     value: product.yaml

      imagePullSecrets:
      - name: token-docker
      restartPolicy: Always
