dapps/b-agri/front-end/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  b-agri-front-end-service
spec:
    type: NodePort
    selector:
        app: b-agri-front-end
    ports:
        - port: 80
          targetPort: 80
          protocol: TCP
